[1.10.6-beta2]锻造配方新增copy_enchantments字段,修复1.19.4-1.20.4版本copy_nbt实际效果相反的bug